Date: CURRENT
    Adding a XML screen/subscreen description facility (with identical 
	functionality to Subscreen module; intent is to facilitate user
	tasks, make code independent of subscreen interface parametrization).
	Using LightXML.jl, and various editors/validators for xsd.

Date: Sat Apr 11 22:55:23 2015 +0200
    Adding functionality: camera movement in one subscreen follows a different
	 subscreen ; progress towards implementing a more general facility
	 (Adaptor) permitting to feed one subscreen signals into a different one.

Date: Mon Apr 6 18:55:44 2015 +0200
    Adding interface to effect geometrical (and possibly other) transformations
	on RenderObject or their presentation by OGL.
	Using 2 techniques: 
	    -camera (in Screen...)
	    -RenderObject (added field manipVirtuals ... not used at the moment)
	Currently works for cube(own RO construction), plot of 2D 
	function ( as provided  with Romeo).

	Issues: Problem when trying to visualize plot of 3D data field (
	        error in renderloop)

Date: Tue Mar 31 11:33:47 2015 +0200
    Modularized RomeoLib
    SubsScreens reimplemented for hierachical subscreen model, 
        previous version now called SimpleSubScreens. Additional functionality
        and extensible framework (attrib in SubScreens permit to add various
        set up operations; will try to implement first (not for this commit):
           - shared view parameters between subscreens (dynamic, one view follows the other)
           - derived view parameters (static):subscreen shows a fix view of other subscreen
           - derived view parameters (dynamicà
           - time dependent display

Date:   Sun Mar 22 13:59:32 2015 +0100
    Able to display raw OGL with shader programs
    Track GLFW/OpenGL operations, implement a debugging facility (also in 
    GLAbstraction and GLWindow)

Date:   Mon Mar 16 21:13:01 2015 +0100
    Relies on several mods by Sdanisch <sdanisch@gmail.com> (Romeo, GLXX..)
    Operate in Julia 0.3 and 0.4