@@ -1,4 +1,4 @@
-# --line 10622 --  -- from : "BigData.pamphlet"  
+# --line 10624 --  -- from : "BigData.pamphlet"  
 module MatrixMathPlus
 
 export norm2S,  frobNorm, 
