@@ -148,12 +148,14 @@ function init_romeo( vObjT::SubScreen; pcamSel=true)
            ssc.attrib[sigArea ] = 
               lift (Romeo.ROOT_SCREEN.area,  screen_height_width) do ar,screenDims
                        RectangleProp(ssc,screenDims) 
-                    end   
-           println("In fnWalk1 at$indx: sigArea=", value(ssc.attrib[sigArea ]))
+                    end
+           println("Debug info")   
+           @show ssc.attrib[sigArea ]
+           println("In fnWalk1 at$indx: sigArea=", ssc.attrib[sigArea ])
     end
     treeWalk!(vObjT,  fnWalk1)
 
-# --line 9980 --  -- from : "BigData.pamphlet"  
+# --line 9982 --  -- from : "BigData.pamphlet"  
     # Make subscreens of Screen type, each equipped with renderlist
     # We will then put RenderObject in each of the subscreens
 
@@ -164,7 +166,7 @@ function init_romeo( vObjT::SubScreen; pcamSel=true)
     treeWalk!(vObjT,  fnWalk2)
 
 
-# --line 9992 --  -- from : "BigData.pamphlet"  
+# --line 9994 --  -- from : "BigData.pamphlet"  
    # Equip each subscreen with a RenderObject 
 
     fnWalk3 = function( ssc::SubScreen, 
@@ -212,7 +214,7 @@ function init_romeo( vObjT::SubScreen; pcamSel=true)
        vo  = ssc.attrib[ RObjFn ]( scr, camera )
 
 
-# --line 10041 --  -- from : "BigData.pamphlet"  
+# --line 10043 --  -- from : "BigData.pamphlet"  
        # The game here: thy shall not call visualize with a RenderObject
        # ( May be this can be simplified if  my proposed patch in 
        # Romeo/src/visualize_interface.jl gets accepted)
@@ -241,7 +243,7 @@ function init_romeo( vObjT::SubScreen; pcamSel=true)
        ssc.attrib[ROProper] = viz
 
 
-# --line 10071 --  -- from : "BigData.pamphlet"  
+# --line 10073 --  -- from : "BigData.pamphlet"  
        # Does the user request virtual functions (we need to verify availability or diagnose)
        marker  = haskey(ssc.attrib,ROReqVirtUser) ? ssc.attrib[ROReqVirtUser] : 0
        # Check availability, this will use an external function (in ad hoc module!)
@@ -255,7 +257,7 @@ function init_romeo( vObjT::SubScreen; pcamSel=true)
             end
        end
 
-# --line 10086 --  -- from : "BigData.pamphlet"  
+# --line 10088 --  -- from : "BigData.pamphlet"  
        # this way the user can request a dump 
        if haskey(ssc.attrib,RODumpMe)
           println("Dump for object viz of type = ",typeof(viz),"")
@@ -273,7 +275,7 @@ function init_romeo( vObjT::SubScreen; pcamSel=true)
           end
        end
 
-# --line 10107 --  -- from : "BigData.pamphlet"  
+# --line 10109 --  -- from : "BigData.pamphlet"  
        if isa(viz,(RenderObject...))
             for v in viz
                 push!(scr.renderlist, v)
@@ -297,10 +299,10 @@ function init_romeo( vObjT::SubScreen; pcamSel=true)
 
     end   # function  fnWalk3
 
-# --line 10132 --  -- from : "BigData.pamphlet"  
+# --line 10134 --  -- from : "BigData.pamphlet"  
     treeWalk!(vObjT,  fnWalk3)
 
-# --line 10138 --  -- from : "BigData.pamphlet"  
+# --line 10140 --  -- from : "BigData.pamphlet"  
 # 4th pass for  operations which require multiple RO built (so that 
 # we do not have to care about order of RO construction
     function fnWalk4( ssc::SubScreen, 
@@ -325,10 +327,10 @@ function init_romeo( vObjT::SubScreen; pcamSel=true)
     treeWalk!(vObjT,  fnWalk4)
 
 
-# --line 10165 --  -- from : "BigData.pamphlet"  
+# --line 10167 --  -- from : "BigData.pamphlet"  
 end
 
-# --line 10707 --  -- from : "BigData.pamphlet"  
+# --line 10709 --  -- from : "BigData.pamphlet"  
 function interact_loop()
    while Romeo.ROOT_SCREEN.inputs[:open].value
       glEnable(GL_SCISSOR_TEST)
