@@ -1,4 +1,4 @@
-# --line 10459 --  -- from : "BigData.pamphlet"  
+# --line 10461 --  -- from : "BigData.pamphlet"  
 module VirtualOGLGeom
 
 export  rotationMatrix,
@@ -14,12 +14,12 @@ using ImmutableArrays
 using SubScreens
 using ROGeomOps
 using MatrixMathPlus
-# --line 10489 --  -- from : "BigData.pamphlet"  
+# --line 10491 --  -- from : "BigData.pamphlet"  
 function rotationMatrix{T}(angle::T, axis::Vector3{T})
          GLAbstraction.rotate(angle,axis)
 end
 
-# --line 10498 --  -- from : "BigData.pamphlet"  
+# --line 10500 --  -- from : "BigData.pamphlet"  
 ## NOTE: more representations of rotation matrices appear in 
 ##       GLAbstraction.GLMatrixMath
 
@@ -54,12 +54,12 @@ rotationMatrixCardan{T}(phi::T, theta::T, psi::T)=rotationMatrixXYZ(phi,
 
 
 
-# --line 10535 --  -- from : "BigData.pamphlet"  
+# --line 10537 --  -- from : "BigData.pamphlet"  
 function translationMatrix{T}(translation::Vector3{T})
        GLAbstraction.translationmatrix(translation)
 end
 
-# --line 10542 --  -- from : "BigData.pamphlet"  
+# --line 10544 --  -- from : "BigData.pamphlet"  
 function   modelGeomApply{T}(ro::RenderObject, matrix::Matrix4x4{T})
     # basic philosophy: look into ro's Virtual Function Table, grab the
     # transformation and apply it or throw error (geom transf non supported)
@@ -69,12 +69,12 @@ function   modelGeomApply{T}(ro::RenderObject, matrix::Matrix4x4{T})
     xformFn = vfns[VFXCapabilities]
     xformFn(ro,matrix)
 end
-# --line 10555 --  -- from : "BigData.pamphlet"  
+# --line 10557 --  -- from : "BigData.pamphlet"  
 modelGeomRotate{T}( ro::RenderObject,angle::T, axis::Vector3{T} )=
           modelGeomApply(ro,rotationMatrix(angle, axis))
 modelGeomtranslate{T}(ro::RenderObject, translation::Vector3{T} )=
           modelGeomApply(ro,translationMatrix(translation))
-# --line 10566 --  -- from : "BigData.pamphlet"  
+# --line 10568 --  -- from : "BigData.pamphlet"  
 @doc  """ This function performs the geometric transformation on
           model space when this is amenable to camera or camera
           parameter changes
@@ -104,7 +104,7 @@ function effVModelGeomCamera{T}(ssc::SubScreen, eyepos::Vector3{T},
       return  eyepos, centerscene
    end
 end
-# --line 10599 --  -- from : "BigData.pamphlet"  
+# --line 10601 --  -- from : "BigData.pamphlet"  
 @doc """ This is performs modelSpace transformations
          ro :is a RenderObject which supports model space transformations
          matrix: is the transformation matrix in homogeneous coordinates 
@@ -118,5 +118,5 @@ rotateInner{T}(ro::RenderObject,rmat::Matrix4x4{T}) = modelSpaceXform(ro,rmat)
 translateInner{T}(ro::RenderObject,rmat::Matrix4x4{T}) = modelSpaceXform(ro,rmat)
 
 
-# --line 10616 --  -- from : "BigData.pamphlet"  
+# --line 10618 --  -- from : "BigData.pamphlet"  
 end # module VirtualOGLGeom
